change photos and add real balance

--- a/views/home.html
+++ b/views/home.html
@@ -31,7 +31,7 @@
         </div>
         <br/>
         <div class="button-wrap need_to_update">
-            Вам необходимо обновить приложение.<br /><b><a href="#" onclick="window.open('market://details?id=ru.softmg.appletaxidrivers', '_system','location=no')">Нажмите!</a></b>
+            Вам необходимо обновить приложение.<br /><b><a href="#" onclick="window.open('market://details?id=ru.appletaxidrivers', '_system','location=no')">Нажмите!</a></b>
         </div>
 
         <h1 data-bind="text: title"></h1>
