--- a/views/home_register.html
+++ b/views/home_register.html
@@ -1,21 +1,20 @@
 <div data-options="dxView : { name: 'home_register', title: '@appletaxi' }">
 
     <div class="home_register" data-options="dxContent : { targetPlaceholder: 'content' }">
-      <h2 data-bind="text: '@title_enter'"></h2>
-
-      <div class="dx-field">
-          <input type="number" id="titleInput"/>
-
-          <!--<div id="titleInput" class="dx-field-value" data-bind="dxTextBox: { value: title, placeholder: '@title' }" id="titleInput"></div>-->
-      </div>
-      <div class="dx-field">
-        <div class="button-wrap" data-bind="dxAction: register">
-            <!--<div data-bind="dxButton: { text: '@register' }"></div>-->
-            <input type="button" class="register" value="Зарегистрироваться"  />
+        <div class="fields">
+            <div class="row">
+                <div class="title">логин</div>
+                <div class="field"><input type="number" id="titleInput" required/></div>
+            </div>
+            <div class="row">
+                <div class="title">пароль</div>
+                <div class="field"><input type="password" id="passwordInput" required/></div>
+            </div>
         </div>
-      </div>
-      <div class="view-footer" data-bind="text: version"></div>
 
+        <div class="button-wrap" data-bind="dxAction: register">
+            <input type="button" class="register" value="вход"  />
+        </div>
     </div>
 </div>
 
