--- a/views/home.html
+++ b/views/home.html
@@ -55,7 +55,7 @@
                         До конца аренды остается:<br />
                         <span></span>
                     </div>
-
+                    <div class="is_day_off">выходной</div>
                 </div>
               </div>
 
